[package]
name = "kp2p"
version = "0.0.0"
rust-version = "1.81.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
strip = true
overflow-checks = true
panic = "abort"

[dependencies]
kaspa-p2p-lib = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.15.2" }
kaspa-connectionmanager = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.15.2" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.15.2" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.15.2" }
kaspa-p2p-flows = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.15.2" }
kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.15.2" }

clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls", "gzip"] }
itertools = "0.13.0"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
