[package]
name = "kp2p"
rust-version = "1.83.0"
edition = "2021"
build = "build.rs"

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
strip = true
overflow-checks = true
panic = "abort"

[build-dependencies]
vergen-git2 = "1.0.5"

[dependencies]
kaspa-p2p-lib = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.16.1" }
kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.16.1" }
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls", "gzip"] }
itertools = "0.14.0"
uuid = { version = "1.14.0", features = ["v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
