[package]
name = "kp2p"
rust-version = "1.83.0"
edition = "2021"
build = "build.rs"

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
strip = true
overflow-checks = true
panic = "abort"

[build-dependencies]
vergen-git2 = "1.0.7"

[dependencies]
kaspa-p2p-lib = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls", "gzip"] }
itertools = "0.14.0"
uuid = { version = "1.14.0", features = ["v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["hex", "macros"] }
hex = "0.4.3"
